# ocmg-rpc-prototype

./: .ycm_extra_conf.py  CMakeLists.txt  GTest.cmake  LICENSE  README.md  rpc.md
src/: CMakeLists.txt  daemon.cc  daemon.h  main.cc
src/rpc/: rpc.cc  rpc.h
test/: CMakeLists.txt  rpcc_test.cc  rpcs_test.cc
